overlays/edge-chicago/pos-black-friday-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pos-ui
spec:
  replicas: 4 # Increase for Black Friday traffic
  template:
    spec:
      containers:
      - name: pos
        image: retailstorefrontacr.azurecr.io/react-pos:v6.0-black-friday-final # BLACK FRIDAY FINAL
